--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -15,38 +15,38 @@
     <!-- Favicon -->
     <link th:href="@{/img/favicon.ico}" rel="icon">
     <!-- Google Web Fonts -->
-    <link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
-    <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
-    <link th:href="@{https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap}"
+    <link rel="preconnect" href=https://fonts.googleapis.com>
+    <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
           rel="stylesheet">
     <!-- Icon Font Stylesheet -->
-    <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}" rel="stylesheet">
-    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Libraries Stylesheet -->
-    <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
-    <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
-    <link th:href="@{/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet"/>
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
     <!-- Customized Bootstrap Stylesheet -->
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Template Stylesheet -->
-    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 
     <!-- JavaScript Libraries -->
-    <script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
-    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/lib/wow/wow.min.js}"></script>
-    <script th:src="@{/lib/easing/easing.min.js}"></script>
-    <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
-    <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
-    <script th:src="@{/lib/tempusdominus/js/moment.min.js}"></script>
-    <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
-    <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script th:src="@{/js/main.js}"></script>
-	<script th:src="@{/js/session.js}"></script>
-	<script th:src="@{/js/session2.js}"></script>
+    <script src="js/main.js"></script>
+	<script src="js/session.js"></script>
+	<script src="js/session2.js"></script>
     <style type="text/css">
         .img-fluid {
             max-width: 600px;
@@ -71,10 +71,7 @@
             display: none;
         }
     </style>
-    <body>
-
-</body>
-
+    
 
 
 
@@ -105,8 +102,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
-                <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
-                <a th:href="@{'/find'}" class="nav-item nav-link">商品資訊</a>
+                <a href="index" class="nav-item nav-link">首頁</a>
+                <a href="find" class="nav-item nav-link">商品資訊</a>
                 <div class="nav-item dropdown">
                 </div>
             </div>
@@ -123,19 +120,26 @@
                     <p class="fs-4 text-white mb-4 ">Tempor erat elitr rebum at clita diam amet diam et eos erat ipsum
                         lorem sit</p>
                     <div class="position-relative w-75 mx-auto ">
-                        <form method="post">
-                            <input name="travelId" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
+                       
+                            <input id="travelTown" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
                                    style="margin-top: 7px;" placeholder="請輸入想要搜尋的縣市"/>
-                            <button class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
+                            <button id="search" class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
                                     style="margin-top: 15px;">Search
                             </button>
-                        </form>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<div class="container-xxl py-5">
+
+<div id="dataList" class="row col-*-* gy-8 gx-4 justify-content-center">
+
+</div>
+</div>  
 <!--    商品圖片頁-->
 <!--<div id="分頁">-->
 <!--    <a href="#home">Home</a>-->
@@ -145,8 +149,8 @@
 
 <!-- 商品資訊 -->
 
-<div class="container-xxl py-5">
-    <div1 class="row col-*-* gy-8 gx-4 justify-content-center">
+<!-- <div class="container-xxl py-5">
+    <div class="row col-*-* gy-8 gx-4 justify-content-center">
             <tr th:each="travel : ${listTravel }">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
                      style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
@@ -187,8 +191,8 @@
                 </div>
 
             </tr>
-    </div1>
-</div>
+    </div>
+</div> -->
 
 
 <div>&nbsp;</div>
@@ -209,6 +213,98 @@
 <!--    <span th:unless="${currentPage < totalPages}">Next</span>-->
 
 </div>
+<script> 
+
+    $(document).ready(function(){
+ 
+        datalist(); 
+    });
+    $("#search").click(function(){
+        // console.log(123);
+        // console.log($("#travelTown").val());
+      
+       
+        datalist();
+    });
+
+    
+    function datalist() {
+        var url = "http://localhost:8080/travel/products";
+        if($("#travelTown").val()!=""){
+            console.log("123")
+            url+="?town="+$("#travelTown").val()
+
+        }
+        
+        $.ajax({
+            type:"GET",
+            url: url,
+            dataType : 'json',
+            contentType: "application/json ; charset=utf-8", 
+            success:function(data) {
+                
+                Info(data);
+                console.log("ok");
+               
+            }
+        });
+    }
+    function Info(data){
+        var html =""
+        $.each(data,function(index,item){
+
+          
+       
+        
+        html =  `         
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
+                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                <div class="package-item">
+                    <div class="overflow-hidden">
+                       <img src="${item.picture}" class="img-fluid"  alt="">
+                    </div>
+                    <div class="d-flex border-bottom">
+                        <small class="flex-fill text-center border-end py-2"><i
+                                class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span>${item.town}</span></small>
+
+                        <small class="flex-fill text-center border-end py-2"><i
+                                class="fa fa-map-marker-alt text-primary me-2"></i>
+                                <span>${item.name}</span></small>
+                        <small id="travelvalue" class="flex-fill text-center py-2"><i
+                                class="fa fa-user text-primary me-2"></i>
+                                <span>${item.id}</span></small>
+                    </div>
+                    <div class="text-center p-4">
+                        <h3 class="mb-0">
+                            <span>${item.ticket}</span></h3>
+                        <div class="mb-3">
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                            <small class="fa fa-star text-primary"></small>
+                        </div>
+                        <p1><span class="overflow-auto">${item.introduce}</span></p1>
+                        <div class="d-flex justify-content-center mb-2">
+                            <button onclick="myFunction()"  class="btn btn-sm btn-primary px-3 border-end"
+                               style="border-radius: 30px 0 0 30px;">購買
+                                </button>
+                        </div>
+                    </div>
+                </div>
+                </div>
+
+           
+    </div>
+</div>`
+    $("#dataList").append(html);
+    });
+    }
+
+    
+    </script>
+
 
 </body>
 
