--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -15,43 +15,40 @@
     <!-- Favicon -->
     <link th:href="@{/img/favicon.ico}" rel="icon">
     <!-- Google Web Fonts -->
-
-    <link rel="preconnect" href=https://fonts.googleapis.com>
-    <link rel="preconnect" href=https://fonts.gstatic.com crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
-          rel="stylesheet">
-
+    <link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
+    <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
+    <link
+        th:href="@{https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap}"
+        rel="stylesheet">
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}" rel="stylesheet">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css}" rel="stylesheet">
     <!-- Libraries Stylesheet -->
-
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
-
+    <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
+    <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
+    <link th:href="@{/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" rel="stylesheet">
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/lib/wow/wow.min.js}"></script>
+    <script th:src="@{/lib/easing/easing.min.js}"></script>
+    <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
+    <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
+    <script th:src="@{/lib/tempusdominus/js/moment.min.js}"></script>
+    <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
+    <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
     <!-- Template Javascript -->
+    <script th:src="@{/js/main.js}"></script>
 
-    <script src="js/main.js"></script>
-	<script src="js/session.js"></script>
-	<script src="js/session2.js"></script>
+	<script th:src="@{/js/session.js}"></script>
+	<script th:src="@{/js/session2.js}"></script>
 
     <style type="text/css">
         .img-fluid {
@@ -79,6 +76,10 @@
         }
     </style>
 
+<body>
+
+</body>
+
 
 
 
@@ -95,51 +96,69 @@
         </div>
 
     </div>
+    <!-- Spinner End -->
 
-</div>
-<!-- Spinner End -->
-
-
-
-<!-- 導航欄 -->
-<div class="container-fluid position-relative p-0">
-    <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-        <a href="index" class="navbar-brand p-0">
-            <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>Tourist</h1>
-            <!-- <img src="img/logo.png" alt="Logo"> -->
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="fa fa-bars"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto py-0">
-                <a href="index" class="nav-item nav-link">首頁</a>
-                <a href="find" class="nav-item nav-link">商品資訊</a>
-                <div class="nav-item dropdown">
-
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark px-5 d-none d-lg-block">
+        <div class="row gx-0">
+            <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
+            </div>
+            <div class="col-lg-4 text-center text-lg-end">
+                <div class="d-inline-flex align-items-center" style="height: 45px;">
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
+                            class="fab fa-twitter fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
+                            class="fab fa-facebook-f fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
+                            class="fab fa-linkedin-in fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
+                            class="fab fa-instagram fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i
+                            class="fab fa-youtube fw-normal"></i></a>
                 </div>
             </div>
         </div>
+    </div>
+    <!-- Topbar End -->
 
-    </nav>
+
+    <!-- 導航欄 -->
+    <div class="container-fluid position-relative p-0">
+        <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+            <a href="index" class="navbar-brand p-0">
+                <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>Tourist</h1>
+                <!-- <img src="img/logo.png" alt="Logo"> -->
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="fa fa-bars"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto py-0" id="registerToBack">
+                    <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
+                    <a th:href="@{'/find'}" class="nav-item nav-link active">旅遊資訊</a>
+
+                </div>
+
+            </div>
+        </nav>
 
 
-    <div class="container-fluid bg-primary py-5 mb-5 hero-header">
-        <div class="container py-5">
-            <div class="row justify-content-center py-5">
-                <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
-                    <h1 class="display-3 text-white mb-3 ">Enjoy Your Vacation With Us</h1>
-                    <p class="fs-4 text-white mb-4 ">Tempor erat elitr rebum at clita diam amet diam et eos erat ipsum
-                        lorem sit</p>
-                    <div class="position-relative w-75 mx-auto ">
-                       
-                            <input id="travelTown" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
-                                   style="margin-top: 7px;" placeholder="請輸入想要搜尋的縣市"/>
-                            <button id="search" class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
+        <div class="container-fluid bg-primary py-5 mb-5 hero-header">
+            <div class="container py-5">
+                <div class="row justify-content-center py-5">
+                    <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
+                        <h1 class="display-3 text-white mb-3 ">探索你的玩樂世界</h1>
+                        <p class="fs-4 text-white mb-4 ">找尋在地體驗或到遠方探險，隨時隨地探索屬於你的玩樂世界</p>
+                        <div class="position-relative w-75 mx-auto ">
+                            <form method="post">
+                                <input name="travelId" class="border-0 rounded-pill w-100 py-3 ps-4 pe-5"
+                                    style="margin-top: 7px;" placeholder="請輸入想要搜尋的縣市" />
+                                <button
+                                    class="btn btn-primary rounded-pill py-2 px-4 position-absolute top-0 end-0 me-2"
                                     style="margin-top: 15px;">Search
-                            </button>
-                        
-
+                                </button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -149,13 +168,10 @@
 </div>
 
 
-
+<!-- 商品資訊 -->
 <div class="container-xxl py-5">
+<div id="info" class="row col-*-* gy-8 gx-4 justify-content-center"></div>
 
-<div id="dataList" class="row col-*-* gy-8 gx-4 justify-content-center">
-
-</div>
-</div>  
 
 
 
@@ -178,73 +194,55 @@
 <!--    <span th:unless="${currentPage < totalPages}">Next</span>-->
 
 
-</div>
-<script> 
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-    $(document).ready(function(){
+</body>
 
- 
-        datalist(); 
-    });
-    $("#search").click(function(){
-        // console.log(123);
-        // console.log($("#travelTown").val());
-      
-       
-        datalist();
-    });
+</html>
 
-    
-    function datalist() {
-        var url = "http://localhost:8080/travel/products";
-        if($("#travelTown").val()!=""){
-            console.log("123")
-            url+="?town="+$("#travelTown").val()
 
-        }
-        
-        $.ajax({
-            type:"GET",
-            url: url,
-            dataType : 'json',
-            contentType: "application/json ; charset=utf-8", 
-            success:function(data) {
-                
-                Info(data);
-                console.log("ok");
-               
-            }
-        });
+
+
+<script>
+$.ajax({
+    method: "get",
+    url: "/travel/findList",
+    success:function(data) {
+		console.log(data);
+        getInfo(data);
     }
-    function Info(data){
-        var html =""
-        $.each(data,function(index,item){
+  });
+  
+ 
 
-          
-       
-        
-        html =  `         
+function getInfo(data) {
+    var html = "";
+    $.each(data, function(index, item)  {
+        console.log(item);
+
+
+    html += `
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
                      style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                 <div class="package-item">
                     <div class="overflow-hidden">
-                       <img src="${item.picture}" class="img-fluid"  alt="">
+                        <img class="img-fluid" src="${item.picture}" alt="">
                     </div>
                     <div class="d-flex border-bottom">
                         <small class="flex-fill text-center border-end py-2"><i
                                 class="fa fa-map-marker-alt text-primary me-2"></i>
-                                <span>${item.town}</span></small>
+                                <span ${item.town}</span></small>
 
                         <small class="flex-fill text-center border-end py-2"><i
                                 class="fa fa-map-marker-alt text-primary me-2"></i>
-                                <span>${item.name}</span></small>
-                        <small id="travelvalue" class="flex-fill text-center py-2"><i
-                                class="fa fa-user text-primary me-2"></i>
-                                <span>${item.id}</span></small>
+                                <span>${item.address}</span></small>
+                        <small  class="flex-fill text-center py-2"><i
+                        		id="travelvalue"
+                                class="fa fa-user text-primary me-2"></i
+                                ><span>${item.id}</span></small>
                     </div>
                     <div class="text-center p-4">
-                        <h3 class="mb-0">
-                            <span>${item.ticket}</span></h3>
+                        <h3 class="mb-0"><span>${item.ticket}</span></h3>
                         <div class="mb-3">
                             <small class="fa fa-star text-primary"></small>
                             <small class="fa fa-star text-primary"></small>
@@ -260,45 +258,10 @@
                         </div>
                     </div>
                 </div>
-                </div>
+                </div>`;
 
-           
-    </div>
-</div>`
-    $("#dataList").append(html);
-    });
-    }
-
-    
-    </script>
-
-
-</body>
-
-</html>
-<!--<table border="1" witch="100">-->
-
-<!--    <tr>-->
-<!--        <th>地點</th>-->
-<!--        <th>縣市區域</th>-->
-<!--        <th>地址</th>-->
-<!--        <th>電話</th>-->
-<!--        <th>門票價錢</th>-->
-<!--        <th>景點介紹</th>-->
-<!--        <th>景點照片</th>-->
-<!--        <th>售票資訊</th>-->
-<!--    </tr>-->
-<!--    <tr th:each="travel : ${listTravel }">-->
-<!--        <td th:text="${travel.name}"></td>-->
-<!--        <td th:text="${travel.town}"></td>-->
-<!--        <td th:text="${travel.address}"></td>-->
-<!--        <td th:text="${travel.tel}"></td>-->
-<!--        <td th:text="${travel.ticket}"></td>-->
-<!--        <td th:text="${travel.introduce}"></td>-->
-<!--        <td id="img"><img th:src="@{(${travel.picture})}"/></td>-->
-
-<!--    </tr>-->
-<!--</table>-->
-
-
+            })
+    $("#info").append(html);
+}
+</script>
 
