--- a/TravelB/src/main/resources/templates/Find.html
+++ b/TravelB/src/main/resources/templates/Find.html
@@ -104,7 +104,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index" class="nav-item nav-link">首頁</a>
-                    <a href="find" class="nav-item nav-link">商品資訊</a>
+                    <a href="find" onclick="findAll()" class="nav-item nav-link">旅遊資訊</a>
                     <div class="nav-item dropdown">
 
                     </div>
@@ -143,10 +143,13 @@
 
 
     <div class="container-xxl py-5">
-
+        <a href="index" style="font-size: 35px;">首頁</a> >
+        <a href="#" style="font-size: 35px;" onclick="findAll()">台灣</a> >
+        <a id="titlefont"></a>
         <div id="dataList" class="row col-*-* gy-8 gx-4 justify-content-center">
 
         </div>
+        <a style="font-size: 20px;"></a>
         <div class="pagination-center">
             <div class="page_show">
                
