--- a/TravelB/src/main/resources/templates/index.html
+++ b/TravelB/src/main/resources/templates/index.html
@@ -84,7 +84,7 @@
                 <div class="navbar-nav ms-auto py-0" id="registerToBack">
                     <a href="index" class="nav-item nav-link active">首頁</a>
 
-                    <a href="find" class="nav-item nav-link">旅遊資訊</a>
+                    <a href="find" onclick="findAll()" class="nav-item nav-link">旅遊資訊</a>
 
 
 
@@ -129,35 +129,26 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
-                    <h1 class="mb-4">Welcome to <span class="text-primary">Tourist</span></h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit.</p>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+                    <h6 class="section-title bg-white text-start text-primary pe-3">歡迎</h6>
+                    <h1 class="mb-4">選擇 <span class="text-primary">Tourist </span><span>的理由</span></h1>
+                    <p class="mb-4" style="font-weight:bolder;">無論何時何地，我們都能帶你找到最棒的吃喝玩樂體驗！</p>
+                    <p class="mb-4">想知道附近有什麼好吃好玩？或想來趟放鬆身心靈的旅行？ Tourist 通通有！輕鬆動動手指，玩樂一手掌握！</p>
+                    <p class="mb-4" style="font-weight:bolder;">帶領你探索玩樂靈感，盡情享受世界的一切美好</p>
+                    <p class="mb-4">無論是挖掘在地新玩法或出國旅行，距離不是問題，重要的是體驗當中的玩樂點滴</p>
                     </p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>發掘玩樂靈感</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Handpicked Hotels</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>預訂簡單快速</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>5 Star Accommodations</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>玩樂品質保證</p>
                         </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>150 Premium City Tours
-                            </p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
-                        </div>
+                       
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="find" onclick="findAll()">查看更多景點</a>
                 </div>
             </div>
         </div>
